# bachelor-thesis-flow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  build_defmap_stack.py  confidence.py  heatmap.py  iou.py  lucas.ipynb  match_labels.py  piv.ipynb  pyproject.toml  release-please-config.json  rgbcode.py  timelagcorrection_div.py  timelagcorrection_mag.py  tutorial.ipynb
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  dependency-review.yml  figures.yml  release-please.yml  scorecard.yml
scripts/: regenerate_assets.py
src/btflow/: __init__.py  __main__.py  _types.py  cli.py  defmap.py  io.py  iou.py  lagcorr.py  match_labels.py  rgb_stack.py
src/btflow/plots/: __init__.py  confidence_kde.py  heatmap.py  iou_boxplot.py
tests/: conftest.py  test_cli.py  test_defmap.py  test_io.py  test_iou.py  test_lagcorr.py  test_match_labels.py  test_plots.py  test_rgb_stack.py
